--- a/templates/index.html
+++ b/templates/index.html
@@ -14,45 +14,17 @@
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
-<div class="container text-center">
-    <h1 class="h3 mt-5 mb-1">Пейзажи марса</h1>
-    <div id="carousel" class="carousel slide d-inline-block" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="img-fluid" src="/static/img/изображение_2022-05-08_225534945.png" alt="...">
-            </div>
-
-            {% for item in list_img %}
-            <div class="carousel-item">
-                <img class="img-fluid" src="/static/img/{{item}}" alt="...">
-            </div>
-            {% endfor %}
-
-
-            <!--            <div class="carousel-item">-->
-            <!--                <img class="img-fluid" src="/static/img/изображение_2022-05-08_225555708.png" alt="...">-->
-            <!--            </div>-->
-            <!--            <div class="carousel-item">-->
-            <!--                <img class="img-fluid" src="/static/img/изображение_2022-05-08_225604896.png" alt="...">-->
-            <!--            </div>-->
+<form method="post" enctype="multipart/form-data">
+    <div class="alert alert-warning" role="alert" style="margin-right:1300px;">
+  <div class="form-group">
+    <label for="photo"></label>
+    <input type="file" class="btn btn-success" id="photo" name="file">
+       {% if list_img != [] %}
+      <img src="static/img/{{list_img[-1]}}" width="500px" height="400px">
+        {% endif %}
+  </div>
         </div>
-        <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Предыдущий</span>
-        </a>
-        <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Следующий</span>
-        </a>
-    </div>
-    <form method="post" enctype="multipart/form-data">
-        <div class="form-group">
-            <label for="photo">Выберите файл</label>
-            <input type="file" class="form-control-file" id="photo" name="file">
-        </div>
-        <button type="submit" class="btn btn-primary">Отправить</button>
-    </form>
-</div>
+            <button type="submit" class="btn btn-primary">Отправить</button>
 
 
 </body>
